# calcnum

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/calcnum/: __init__.py  calcnum.py
tests/: test_metodos.py
