[project]
name = "calcnum"
requires-python = ">=3.9"
keywords = ["numpy", "matplolib", "calcnum"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# dependencies = [
#     "numpy",
#     "matplolib",
# ]
dynamic = [
    "version",
    "readme",
    "dependencies",
]

[build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
requires = ["setuptools>=61.0", "hatchling"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "calcnum.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
dependencies = {file = ["requirements.txt"]}

#[tool.pytest.ini_options]
#addopts = [
#    "--import-mode=importlib",
#]