[metadata]
name = calcnum
version = attr: calcnum.__version__
license_files = LICENSE
license = MIT
long_description = file: README.md, LICENSE
keywords = numpy, matplolib, calcnum
classifier = 
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.9
intall_requires = 
    numpy
    matplolib

[options.packages.find]
exclude = 
    examples*
    docs*
    tests*